tsdemux: fix memleak of PCROffsetCurrent

https://bugzilla.gnome.org/show_bug.cgi?id=722145